@@ -72,7 +72,7 @@ public class InputFunction implements Serializable {
             InputStream inputStream = inputFs.open(inputFilePath);
             Class<? extends CompressionCodec> codecClass = codec.codec;
             if (codecClass != null) {
-                CompressionCodec cc = codecClass.newInstance();
+                CompressionCodec cc = codecClass.getDeclaredConstructor().newInstance();
                 ((Configurable) cc).setConf(conf);
 
                 inputStream = cc.createInputStream(inputStream);
